fixing rightrail alignment

--- a/src/styles/container/_c-section.scss
+++ b/src/styles/container/_c-section.scss
@@ -93,7 +93,8 @@
       @include breakpoint(tablet) {
         width: 300px;
         float: right;
-        margin-right: -330px;
+        position: relative;
+        right: -30px;
       }
 
       @include breakpoint(desktop-sm) {
